--- a/src/Domain/DataFixtures/Fixtures/Client.yaml
+++ b/src/Domain/DataFixtures/Fixtures/Client.yaml
@@ -1,16 +1,16 @@
-user_0:
-    Username: User0
+client_0:
+    Username: Client0
     Password: password0
-    Email: user0@mail.com
-user_1:
-    Username: User1
+    Email: client0@mail.com
+client_1:
+    Username: Client1
     Password: password1
-    Email: user1@mail.com
-user_2:
-    Username: User2
+    Email: client1@mail.com
+client_2:
+    Username: Client2
     Password: password2
-    Email: user2@mail.com
-user_3:
-    Username: RegularUser
+    Email: client2@mail.com
+client_3:
+    Username: RegularClient
     Password: OpenClassrooms
-    Email: RegularUser@mail.com
+    Email: RegularClient@mail.com
