--- a/config/serializer/serializer_paginated_collection.yaml
+++ b/config/serializer/serializer_paginated_collection.yaml
@@ -1,10 +1,10 @@
 App\App\Pagination\PaginatedCollection:
     attributes:
         total:
-            groups: ['phones_list', 'users_list']
+            groups: ['phones_list', 'users_client_list']
         limit:
-            groups: ['phones_list', 'users_list']
+            groups: ['phones_list', 'users_client_list']
         _links:
-            groups: ['phones_list', 'users_list']
+            groups: ['phones_list', 'users_client_list']
         objects:
-            groups: ['phones_list', 'users_list']
+            groups: ['phones_list', 'users_client_list']
